--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,19 @@
             </div>
         </div>
     </div>
+     <!-- Comment section -->
+     <div class="comment-section">
+        <h3>Comments</h3>
+        <div class="comments-display">
+            
+            <div class="scrollable-list" style="height: 300px; "></div>
+        </div>
+        <div class="comment-form">
+            <textarea id="comment-input" placeholder="Write a comment..."></textarea>
+            <button id="submit-comment">Submit Comment</button>
+        </div>
+    </div>
+
     <p>Since I built this project, it has a lot of requirements listed below (ensure security, and I am not smart enough to hack ur computer):</p>  
     <p>Enable pop-ups; run nodemon index.js; do not block ports; do not edit the code; allow camera; your face 1-2 feet away and center of camera</p>
     <p></p>  
@@ -44,5 +57,25 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script>
+        async function fetchData() {
+        try {
+            const response = await fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTr484DRG2JsGcmOyYs5xjTSUSZf86a9NzLgOto-5hymsz8hdqnPDnyKKpCvGKaF-pZXooWoJJtGq8x/pubhtml');
+            const rows = await response.json();
+
+            const list = document.querySelector('.scrollable-list');
+            rows.forEach(row => {
+                const listItem = document.createElement('div');
+                listItem.textContent = row[3]; // Assuming you want the 4th column
+                list.appendChild(listItem);
+            });
+        } catch (error) {
+            alert('Error fetching data:', error);
+        }
+    }
+
+    fetchData();
+    </script>
+    
 </body>
 </html>
